# ianny

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PACKAGING.md  README.md  io.github.zefr0x.ianny.desktop  io.github.zer0_x.ianny.desktop  io.github.zer0_x.ianny.metainfo.xml  justfile  meson.build  meson.options  meson_options.txt
.github/workflows/: release.yml
po/: ar.po  io.github.zefr0x.ianny.pot  meson.build
src/: config.rs  main.rs  meson.build  wayland.rs
