[package]
name = "ianny"
version = "0.1.0-alpha.2"
authors = ["zefr0x"]
edition = "2021"
description = "Desktop utility that helps preventing repetitive strain injuries by keeping track of usage patterns and periodically informing user to take breaks"
readme = "README.md"
homepage = "https://github.com/zefr0x/ianny"
repository = "https://github.com/zefr0x/ianny"
license = "GPL-3.0"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
gcd = "2.3.0"
gettext-rs = "0.7.0"
notify-rust = { version = "4.9.0", default-features = false, features = ["d"] }
serde = { version = "1.0.188", features = ["derive"] }
single-instance = "0.3.3"
toml = "0.8.1"
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["client", "staging"] }
wayland-protocols-plasma = { version = "0.2.0", features = ["client"] }
xdg = "2.5.2"

[build-dependencies]
