[package]
name = "ianny"
version = "1.0.0-beta.0"
authors = ["zefr0x"]
edition = "2021"
description = "Desktop utility that helps preventing repetitive strain injuries by keeping track of usage patterns and periodically informing user to take breaks"
readme = "README.md"
homepage = "https://github.com/zefr0x/ianny"
repository = "https://github.com/zefr0x/ianny"
license = "GPL-3.0"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
gcd = "2.3.0"
gettext-rs = "0.7.0"
notify-rust = { version = "4.9.0", default-features = false, features = ["d"] }
once_cell = "1.18.0"
serde = { version = "1.0.190", features = ["derive"] }
single-instance = "0.3.3"
toml = "0.8.6"
wayland-client = "0.31.1"
wayland-protocols = { version = "0.31.0", features = ["client", "staging"] }
wayland-protocols-plasma = { version = "0.2.0", features = ["client"] }
xdg = "2.5.2"
