[package]
name = "ianny"
version = "2.1.2"
authors = ["zefr0x"]
edition = "2024"
description = "Desktop utility that helps preventing repetitive strain injuries by keeping track of usage patterns and periodically informing user to take breaks"
readme = "README.md"
homepage = "https://github.com/zefr0x/ianny"
repository = "https://github.com/zefr0x/ianny"
license = "GPL-3.0"
build = "build.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
gcd = "2.3.0"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
log = "0.4.29"
notify-rust = { version = "4.11.7", default-features = false, features = ["d"] }
serde = { version = "1.0.228", features = ["derive"] }
simple_logger = { version = "5.1.0", default-features = false, features = [
  "colors",
  "stderr",
] }
single-instance = "0.3.3"
toml = "0.9.10"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
xdg = "3.0.0"

# TODO: Consider commented lints when they are stable.
[lints.rust]
absolute_paths_not_starting_with_crate = "deny"
explicit_outlives_requirements = "warn"
# fuzzy_provenance_casts = "warn"
# lossy_provenance_casts = "warn"
# multiple_supertrait_upcastable = "warn"
# must_not_suspend = "warn"
non_ascii_idents = "forbid"
# non_exhaustive_omitted_patterns = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "deny"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
filetype_is_file = "warn"
float_cmp_const = "deny"
format_push_string = "warn"
get_unwrap = "warn"
infinite_loop = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "warn"
# TODO: Enable after false-positive is solved (https://github.com/rust-lang/rust-clippy/issues/9378)
# pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_with_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "warn"
self_named_module_files = "deny"
semicolon_inside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "forbid"
