option (
  'profile',
  type: 'combo',
  choices: [
    'release',
    'debug'
  ],
  value: 'release',
)

option (
  'rustc_target',
  type: 'combo',
  choices: [
    'x86_64-unknown-linux-gnu',
    'x86_64-unknown-linux-musl',
    'i686-unknown-linux-gnu',
    'i686-unknown-linux-musl',
    'arm-unknown-linux-gnueabihf',
    'arm-unknown-linux-musleabihf',
  ],
  value: 'x86_64-unknown-linux-gnu',
)
