option (
  'profile',
  type: 'combo',
  choices: [
    'release',
    'debug'
  ],
  value: 'release',
)

option (
  'rustc_target',
  type: 'combo',
  choices: [
    'aarch64-unknown-linux-gnu',
    'i686-unknown-linux-gnu',
    'x86_64-unknown-linux-gnu',

    'aarch64-unknown-linux-musl',
    'armv7-unknown-linux-gnueabihf',
    'loongarch64-unknown-linux-gnu',
    'riscv64gc-unknown-linux-gnu',
    'x86_64-unknown-linux-musl',

    'armv7-unknown-linux-gnueabi',
    'armv7-unknown-linux-musleabi',
    'armv7-unknown-linux-musleabihf',
    'i686-unknown-linux-musl',
    'thumbv7neon-unknown-linux-gnueabihf',
    'x86_64-unknown-linux-gnux32',
  ],
  value: 'x86_64-unknown-linux-gnu',
)
